# EngineForward

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/EngineSimulation/: CMakeLists.txt  Engine.cpp
src/EngineTest/: CMakeLists.txt  Engine.h  InternalCombustionEngine.cpp  InternalCombustionEngine.h  TestStand.h
src/InteractiveConsole/: CMakeLists.txt  Com.cpp  Com.h
testfile/: engine.cfg
tests/gtest/: CMakeLists.txt  tests.cpp
tests/gtest/enginetest/: enginefour.cfg  enginethree.cfg  enginetwo.cfg
